--- a/css/main.css
+++ b/css/main.css
@@ -37,44 +37,42 @@ img {
   font-size: 15px; }
 
 .nav_and_header {
+  background: radial-gradient(#ffffff, #c5c5c5);
   display: grid;
-  grid-template-rows: 17% 83%;
+  grid-template-rows: 13% 87%;
   width: 100%;
-  height: 750px;
-  background-color: #ffffff; }
+  height: 750px; }
 
 .navbar {
   display: flex;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 20px;
-  background-color: aqua; }
-  .navbar img {
-    width: 170px;
-    margin-left: 70px; }
+  align-items: center; }
+  .navbar .img_logo {
+    width: 140px;
+    margin-left: 160px; }
   .navbar nav {
     height: 50px;
     display: flex;
     flex: 1;
-    align-items: center;
-    text-align: right; }
+    justify-content: end; }
     .navbar nav ul {
       width: 100%;
-      height: 100%;
-      margin-right: 70px;
-      display: inline-block;
-      background-color: #5900ff; }
+      display: flex;
+      justify-content: end;
+      height: 100%; }
       .navbar nav ul li {
-        height: 100%;
-        display: inline-block;
-        margin-right: 20px;
-        background-color: #ff00ff; }
+        display: flex;
+        justify-content: baseline;
+        height: 100%; }
         .navbar nav ul li a {
-          height: 100%;
-          padding: 0 20px;
+          margin-right: 10px;
+          padding: 15px;
           display: flex;
           align-items: center;
-          background-color: #e5ff00; }
+          justify-content: center; }
+  .navbar .img_shop-cont {
+    margin-right: 160px; }
+    .navbar .img_shop-cont .img_shop {
+      width: 45px; }
 
 header {
   display: grid;
@@ -93,6 +91,9 @@ header {
       margin-left: 160px;
       gap: 28px;
       justify-content: center; }
+      header .header-text .header-text_cont h1 {
+        font-size: 40px;
+        font-weight: 900; }
   header .header-img {
     height: 100%;
     display: flex;
@@ -148,32 +149,56 @@ main {
       gap: 80px; }
       main .section_mas_vendido .sect_mv_cont .sect_mv_01 {
         height: 100%;
-        background-color: #91aeff;
         align-items: center;
         justify-content: end; }
         main .section_mas_vendido .sect_mv_cont .sect_mv_01 img {
           width: 210px; }
+        main .section_mas_vendido .sect_mv_cont .sect_mv_01 p {
+          margin-bottom: 20px; }
+        main .section_mas_vendido .sect_mv_cont .sect_mv_01 .btn {
+          background: #008800;
+          color: #fff;
+          padding: 8px 30px;
+          border-radius: 30px; }
       main .section_mas_vendido .sect_mv_cont .sect_mv_02 {
-        background-color: #ffcc91;
         height: 100%;
         align-items: center;
         justify-content: center; }
         main .section_mas_vendido .sect_mv_cont .sect_mv_02 img {
           width: 210px; }
+        main .section_mas_vendido .sect_mv_cont .sect_mv_02 p {
+          margin-bottom: 20px; }
+        main .section_mas_vendido .sect_mv_cont .sect_mv_02 .btn {
+          background: #008800;
+          color: #fff;
+          padding: 8px 30px;
+          border-radius: 30px; }
       main .section_mas_vendido .sect_mv_cont .sect_mv_03 {
         height: 100%;
-        background-color: #e2ff91;
         align-items: center;
         justify-content: center; }
         main .section_mas_vendido .sect_mv_cont .sect_mv_03 img {
           width: 210px; }
+        main .section_mas_vendido .sect_mv_cont .sect_mv_03 p {
+          margin-bottom: 20px; }
+        main .section_mas_vendido .sect_mv_cont .sect_mv_03 .btn {
+          background: #008800;
+          color: #fff;
+          padding: 8px 30px;
+          border-radius: 30px; }
       main .section_mas_vendido .sect_mv_cont .sect_mv_04 {
         height: 100%;
-        background-color: #ffab91;
         align-items: center;
         justify-content: baseline; }
         main .section_mas_vendido .sect_mv_cont .sect_mv_04 img {
           width: 210px; }
+        main .section_mas_vendido .sect_mv_cont .sect_mv_04 p {
+          margin-bottom: 20px; }
+        main .section_mas_vendido .sect_mv_cont .sect_mv_04 .btn {
+          background: #008800;
+          color: #fff;
+          padding: 8px 30px;
+          border-radius: 30px; }
   main .section_nuevos_productos {
     width: 100%;
     padding-bottom: 170px;
@@ -193,32 +218,56 @@ main {
       gap: 80px; }
       main .section_nuevos_productos .sect_np_cont .sect_np_01 {
         height: 100%;
-        background-color: #91aeff;
         align-items: center;
         justify-content: end; }
         main .section_nuevos_productos .sect_np_cont .sect_np_01 img {
           width: 210px; }
+        main .section_nuevos_productos .sect_np_cont .sect_np_01 p {
+          margin-bottom: 20px; }
+        main .section_nuevos_productos .sect_np_cont .sect_np_01 .btn {
+          background: #008800;
+          color: #fff;
+          padding: 8px 30px;
+          border-radius: 30px; }
       main .section_nuevos_productos .sect_np_cont .sect_np_02 {
-        background-color: #ffcc91;
         height: 100%;
         align-items: center;
         justify-content: center; }
         main .section_nuevos_productos .sect_np_cont .sect_np_02 img {
           width: 210px; }
+        main .section_nuevos_productos .sect_np_cont .sect_np_02 p {
+          margin-bottom: 20px; }
+        main .section_nuevos_productos .sect_np_cont .sect_np_02 .btn {
+          background: #008800;
+          color: #fff;
+          padding: 8px 30px;
+          border-radius: 30px; }
       main .section_nuevos_productos .sect_np_cont .sect_np_03 {
         height: 100%;
-        background-color: #e2ff91;
         align-items: center;
         justify-content: center; }
         main .section_nuevos_productos .sect_np_cont .sect_np_03 img {
           width: 210px; }
+        main .section_nuevos_productos .sect_np_cont .sect_np_03 p {
+          margin-bottom: 20px; }
+        main .section_nuevos_productos .sect_np_cont .sect_np_03 .btn {
+          background: #008800;
+          color: #fff;
+          padding: 8px 30px;
+          border-radius: 30px; }
       main .section_nuevos_productos .sect_np_cont .sect_np_04 {
         height: 100%;
-        background-color: #ffab91;
         align-items: center;
         justify-content: baseline; }
         main .section_nuevos_productos .sect_np_cont .sect_np_04 img {
           width: 210px; }
+        main .section_nuevos_productos .sect_np_cont .sect_np_04 p {
+          margin-bottom: 20px; }
+        main .section_nuevos_productos .sect_np_cont .sect_np_04 .btn {
+          background: #008800;
+          color: #fff;
+          padding: 8px 30px;
+          border-radius: 30px; }
 
 footer {
   width: 100%;
