--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -20,6 +20,11 @@ header{
 
             justify-content: center; 
 
+            h1{
+                font-size: 40px;
+                font-weight: 900;
+            }
+
         }
 
     }
