--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,12 +12,13 @@
 }
 
 .nav_and_header {
+    background: radial-gradient(#ffffff,#c5c5c5);
     display: grid;
-    grid-template-rows: 17% 83%;
+    grid-template-rows: 13% 87%;
 
     width: 100%;
     height: 750px;
-    background-color: #ffffff;
+
 
 }
 
@@ -103,46 +104,86 @@ main {
 
             .sect_mv_01 {
                 height: 100%;
-                background-color: #91aeff;
                 align-items: center;
                 justify-content: end;
 
                 img {
                     width: 210px;
                 }
+
+                p{
+                    margin-bottom: 20px;
+                }
+
+                .btn{
+                    background: #008800;
+                    color: #fff;
+                    padding: 8px 30px;
+                    border-radius: 30px;
+                }
             }
 
             .sect_mv_02 {
-                background-color: #ffcc91;
                 height: 100%;
                 align-items: center;
                 justify-content: center;
 
                 img {
                     width: 210px;
+                }
+
+                p{
+                    margin-bottom: 20px;
+                }
+
+                .btn{
+                    background: #008800;
+                    color: #fff;
+                    padding: 8px 30px;
+                    border-radius: 30px;
                 }
 
             }
 
             .sect_mv_03 {
                 height: 100%;
-                background-color: #e2ff91;
                 align-items: center;
                 justify-content: center;
 
                 img {
                     width: 210px;
                 }
+
+                p{
+                    margin-bottom: 20px;
+                }
+
+                .btn{
+                    background: #008800;
+                    color: #fff;
+                    padding: 8px 30px;
+                    border-radius: 30px;
+                }
             }
 
             .sect_mv_04 {
                 height: 100%;
-                background-color: #ffab91;
                 align-items: center;
                 justify-content: baseline;
 
                 img {
                     width: 210px;
+                }
+
+                p{
+                    margin-bottom: 20px;
+                }
+
+                .btn{
+                    background: #008800;
+                    color: #fff;
+                    padding: 8px 30px;
+                    border-radius: 30px;
                 }
             }
         }
@@ -175,46 +216,86 @@ main {
 
             .sect_np_01 {
                 height: 100%;
-                background-color: #91aeff;
                 align-items: center;
                 justify-content: end;
 
                 img {
                     width: 210px;
                 }
+
+                p{
+                    margin-bottom: 20px;
+                }
+
+                .btn{
+                    background: #008800;
+                    color: #fff;
+                    padding: 8px 30px;
+                    border-radius: 30px;
+                }
             }
 
             .sect_np_02 {
-                background-color: #ffcc91;
                 height: 100%;
                 align-items: center;
                 justify-content: center;
 
                 img {
                     width: 210px;
+                }
+
+                p{
+                    margin-bottom: 20px;
+                }
+
+                .btn{
+                    background: #008800;
+                    color: #fff;
+                    padding: 8px 30px;
+                    border-radius: 30px;
                 }
 
             }
 
             .sect_np_03 {
                 height: 100%;
-                background-color: #e2ff91;
                 align-items: center;
                 justify-content: center;
 
                 img {
                     width: 210px;
                 }
+
+                p{
+                    margin-bottom: 20px;
+                }
+
+                .btn{
+                    background: #008800;
+                    color: #fff;
+                    padding: 8px 30px;
+                    border-radius: 30px;
+                }
             }
 
             .sect_np_04 {
                 height: 100%;
-                background-color: #ffab91;
                 align-items: center;
                 justify-content: baseline;
 
                 img {
                     width: 210px;
+                }
+
+                p{
+                    margin-bottom: 20px;
+                }
+
+                .btn{
+                    background: #008800;
+                    color: #fff;
+                    padding: 8px 30px;
+                    border-radius: 30px;
                 }
             }
         }
