--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,7 @@
 
 //**** NAV ****//
 @import "componentes/nav";
+@import "componentes/nav2";
 
 //**** HEADER ****//
 @import "componentes/header";
@@ -304,7 +305,7 @@ main {
 }
 
 //----------------------------------------------------//
-
+@import "componentes/productos";
 
 
 
