--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 //Fuente roboto a todos los textos
 @import "fuentes/font";
 
+
 //----------------------------------------------------//
 
 .main_wrapper {
@@ -306,6 +307,7 @@ main {
 
 //----------------------------------------------------//
 @import "componentes/productos";
+@import "componentes/nosotros";
 
 
 
