--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,9 @@ img {
   width: 100%;
   height: 750px; }
 
+body::-webkit-scrollbar:vertical {
+  width: 10px; }
+
 .navbar {
   display: flex;
   align-items: center; }
@@ -69,10 +72,112 @@ img {
           display: flex;
           align-items: center;
           justify-content: center; }
-  .navbar .img_shop-cont {
-    margin-right: 160px; }
-    .navbar .img_shop-cont .img_shop {
-      width: 45px; }
+  .navbar .carrito_cont {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+    margin-right: 100px; }
+    .navbar .carrito_cont .numCar-total {
+      color: #fff;
+      font-size: 12px;
+      background-color: #3f3f3f;
+      padding: 7px;
+      border-radius: 100%; }
+    .navbar .carrito_cont .img_shop2 {
+      width: 48px; }
+  .navbar .carrito-overlay {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    background-color: rgba(29, 29, 29, 0.336); }
+    .navbar .carrito-overlay .popup {
+      top: 0;
+      right: 0;
+      background-color: #ffffff;
+      height: 100%;
+      width: 32%;
+      position: absolute; }
+      .navbar .carrito-overlay .popup .close-cont {
+        width: 100%;
+        height: 6%;
+        background-color: #dddddd;
+        display: flex;
+        align-items: center;
+        justify-content: end; }
+        .navbar .carrito-overlay .popup .close-cont .close {
+          width: 10%;
+          height: 100%;
+          font-size: 34px;
+          font-weight: 300;
+          color: #fff;
+          background: #3e015a;
+          display: flex;
+          align-items: center;
+          justify-content: center; }
+      .navbar .carrito-overlay .popup .cont-pop-carrito::-webkit-scrollbar {
+        width: 12px;
+        background: #b6b6b6; }
+      .navbar .carrito-overlay .popup .cont-pop-carrito::-webkit-scrollbar-thumb {
+        background: #1d1d1d; }
+      .navbar .carrito-overlay .popup .cont-pop-carrito {
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        position: relative;
+        overflow-y: scroll; }
+        .navbar .carrito-overlay .popup .cont-pop-carrito .titulo-p-carrito {
+          margin-top: 40px;
+          margin-left: 20px;
+          font-size: 18px; }
+        .navbar .carrito-overlay .popup .cont-pop-carrito .pop-cont2 {
+          display: flex;
+          align-items: center; }
+          .navbar .carrito-overlay .popup .cont-pop-carrito .pop-cont2 .producto-img {
+            margin-left: 20px;
+            width: 180px; }
+        .navbar .carrito-overlay .popup .cont-pop-carrito .cont-popNum {
+          margin: 0 40px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          font-weight: 300;
+          gap: 20px; }
+          .navbar .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad {
+            border: 1px solid #d1d1d19c;
+            display: flex;
+            align-items: center;
+            border-radius: 5px; }
+            .navbar .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad .menos {
+              padding: 5px 12px;
+              background-color: #cecece; }
+            .navbar .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad .popCantidad {
+              padding: 5px 12px; }
+            .navbar .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad .mas {
+              padding: 5px 12px;
+              background-color: #cecece; }
+        .navbar .carrito-overlay .popup .cont-pop-carrito .precio-el-cont {
+          margin-left: 20px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          gap: 10px; }
+          .navbar .carrito-overlay .popup .cont-pop-carrito .precio-el-cont .popPrecio {
+            font-size: 28px; }
+          .navbar .carrito-overlay .popup .cont-pop-carrito .precio-el-cont .eliminar {
+            width: 30px;
+            background: #3e015a;
+            color: #fff;
+            font-size: 13px;
+            padding: 7px 30px;
+            border-radius: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center; }
 
 .cont-productos {
   width: 100%;
@@ -107,9 +212,112 @@ img {
       color: #ffffff;
       font-size: 17px;
       font-weight: 400; }
-  .nav2 .img_shop2 {
-    width: 40px;
-    margin-right: 100px; }
+  .nav2 .carrito_cont {
+    display: flex;
+    align-items: center; }
+    .nav2 .carrito_cont .numCar-total {
+      color: #242424;
+      font-size: 12px;
+      font-weight: 700;
+      background-color: #e4e4e4;
+      padding: 6px;
+      border-radius: 100%; }
+    .nav2 .carrito_cont .img_shop2 {
+      width: 40px;
+      margin-right: 100px; }
+  .nav2 .carrito-overlay {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    background-color: rgba(29, 29, 29, 0.336); }
+    .nav2 .carrito-overlay .popup {
+      top: 0;
+      right: 0;
+      background-color: #ffffff;
+      height: 100%;
+      width: 32%;
+      position: absolute; }
+      .nav2 .carrito-overlay .popup .close-cont {
+        width: 100%;
+        height: 6%;
+        background-color: #dddddd;
+        display: flex;
+        align-items: center;
+        justify-content: end; }
+        .nav2 .carrito-overlay .popup .close-cont .close {
+          width: 10%;
+          height: 100%;
+          font-size: 34px;
+          font-weight: 300;
+          color: #fff;
+          background: #3e015a;
+          display: flex;
+          align-items: center;
+          justify-content: center; }
+      .nav2 .carrito-overlay .popup .cont-pop-carrito::-webkit-scrollbar {
+        width: 12px;
+        background: #b6b6b6; }
+      .nav2 .carrito-overlay .popup .cont-pop-carrito::-webkit-scrollbar-thumb {
+        background: #1d1d1d; }
+      .nav2 .carrito-overlay .popup .cont-pop-carrito {
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        position: relative;
+        overflow-y: scroll; }
+        .nav2 .carrito-overlay .popup .cont-pop-carrito .titulo-p-carrito {
+          margin-top: 40px;
+          margin-left: 20px;
+          font-size: 18px; }
+        .nav2 .carrito-overlay .popup .cont-pop-carrito .pop-cont2 {
+          display: flex;
+          align-items: center; }
+          .nav2 .carrito-overlay .popup .cont-pop-carrito .pop-cont2 .producto-img {
+            margin-left: 20px;
+            width: 180px; }
+        .nav2 .carrito-overlay .popup .cont-pop-carrito .cont-popNum {
+          margin: 0 40px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          font-weight: 300;
+          gap: 20px; }
+          .nav2 .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad {
+            border: 1px solid #d1d1d19c;
+            display: flex;
+            align-items: center;
+            border-radius: 5px; }
+            .nav2 .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad .menos {
+              padding: 5px 12px;
+              background-color: #cecece; }
+            .nav2 .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad .popCantidad {
+              padding: 5px 12px; }
+            .nav2 .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad .mas {
+              padding: 5px 12px;
+              background-color: #cecece; }
+        .nav2 .carrito-overlay .popup .cont-pop-carrito .precio-el-cont {
+          margin-left: 20px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          gap: 10px; }
+          .nav2 .carrito-overlay .popup .cont-pop-carrito .precio-el-cont .popPrecio {
+            font-size: 28px; }
+          .nav2 .carrito-overlay .popup .cont-pop-carrito .precio-el-cont .eliminar {
+            width: 30px;
+            background: #3e015a;
+            color: #fff;
+            font-size: 13px;
+            padding: 7px 30px;
+            border-radius: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center; }
 
 header {
   display: grid;
@@ -344,6 +552,41 @@ main {
         color: #fff;
         padding: 8px 30px;
         border-radius: 30px; }
+
+.cont-nosotros {
+  width: 100%;
+  color: #000000;
+  font-size: 16px;
+  font-weight: 300; }
+  .cont-nosotros main {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .cont-nosotros main .quienesSomos_img {
+      width: 100%;
+      height: 400px;
+      background-image: url(../assets/images/nosotros/nosotros_fondo.jpg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      display: flex;
+      align-items: center; }
+      .cont-nosotros main .quienesSomos_img h2 {
+        color: #ffffff;
+        font-size: 80px;
+        margin-left: 150px;
+        text-decoration-line: underline; }
+    .cont-nosotros main .text-qS-cont {
+      height: 500px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 100px; }
+      .cont-nosotros main .text-qS-cont p {
+        width: 30%;
+        font-size: 28px; }
+      .cont-nosotros main .text-qS-cont .img_tienda {
+        width: 300px; }
 
 footer {
   width: 100%;
