--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ body::-webkit-scrollbar:vertical {
         top: 0;
         right: 0;
         width: 100%;
-        height: 100%;
+        height: 70%;
         position: relative;
         overflow-y: scroll; }
         .navbar .carrito-overlay .popup .cont-pop-carrito .titulo-p-carrito {
@@ -174,6 +174,46 @@ body::-webkit-scrollbar:vertical {
             color: #fff;
             font-size: 13px;
             padding: 7px 30px;
+            border-radius: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center; }
+      .navbar .carrito-overlay .popup .totales-cPopUp {
+        height: 24%; }
+        .navbar .carrito-overlay .popup .totales-cPopUp .tCPopUp {
+          background-color: #eeeeee;
+          height: 30%;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding: 0 80px; }
+          .navbar .carrito-overlay .popup .totales-cPopUp .tCPopUp .tCPopUp-total {
+            font-size: 22px; }
+          .navbar .carrito-overlay .popup .totales-cPopUp .tCPopUp .tCPopUp-precio {
+            font-size: 25px; }
+        .navbar .carrito-overlay .popup .totales-cPopUp .btnTotal {
+          height: 70%;
+          background-color: #b1b1b1;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          gap: 30px; }
+          .navbar .carrito-overlay .popup .totales-cPopUp .btnTotal .btnTotal-01 {
+            width: 40%;
+            height: 38px;
+            background: #3e015a;
+            color: #fff;
+            font-size: 13px;
+            border-radius: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center; }
+          .navbar .carrito-overlay .popup .totales-cPopUp .btnTotal .btnTotal-02 {
+            width: 40%;
+            height: 38px;
+            background: #3e015a;
+            color: #fff;
+            font-size: 13px;
             border-radius: 40px;
             display: flex;
             justify-content: center;
@@ -266,7 +306,7 @@ body::-webkit-scrollbar:vertical {
         top: 0;
         right: 0;
         width: 100%;
-        height: 100%;
+        height: 70%;
         position: relative;
         overflow-y: scroll; }
         .nav2 .carrito-overlay .popup .cont-pop-carrito .titulo-p-carrito {
@@ -314,6 +354,46 @@ body::-webkit-scrollbar:vertical {
             color: #fff;
             font-size: 13px;
             padding: 7px 30px;
+            border-radius: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center; }
+      .nav2 .carrito-overlay .popup .totales-cPopUp {
+        height: 24%; }
+        .nav2 .carrito-overlay .popup .totales-cPopUp .tCPopUp {
+          background-color: #eeeeee;
+          height: 30%;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding: 0 80px; }
+          .nav2 .carrito-overlay .popup .totales-cPopUp .tCPopUp .tCPopUp-total {
+            font-size: 22px; }
+          .nav2 .carrito-overlay .popup .totales-cPopUp .tCPopUp .tCPopUp-precio {
+            font-size: 25px; }
+        .nav2 .carrito-overlay .popup .totales-cPopUp .btnTotal {
+          height: 70%;
+          background-color: #b1b1b1;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          gap: 30px; }
+          .nav2 .carrito-overlay .popup .totales-cPopUp .btnTotal .btnTotal-01 {
+            width: 40%;
+            height: 38px;
+            background: #3e015a;
+            color: #fff;
+            font-size: 13px;
+            border-radius: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center; }
+          .nav2 .carrito-overlay .popup .totales-cPopUp .btnTotal .btnTotal-02 {
+            width: 40%;
+            height: 38px;
+            background: #3e015a;
+            color: #fff;
+            font-size: 13px;
             border-radius: 40px;
             display: flex;
             justify-content: center;
