--- a/scss/componentes/_nav2.scss
+++ b/scss/componentes/_nav2.scss
@@ -218,10 +218,13 @@
 
                     .tCPopUp-total{
                         font-size: 22px;
+                        font-weight: 200;
                     }
 
                     .tCPopUp-precio{
                         font-size: 25px;
+                        font-weight: 500;
+
                     }
                 }
 
@@ -238,8 +241,9 @@
                         height: 38px;
                         background: #3e015a;
                         color: #fff;
-                        font-size: 13px;
+                        font-size: 15px;
                         border-radius: 40px;
+                        font-weight: 500;
 
                         display: flex;
                         justify-content: center;
@@ -252,8 +256,9 @@
                         height: 38px;
                         background: #3e015a;
                         color: #fff;
-                        font-size: 13px;
+                        font-size: 15px;
                         border-radius: 40px;
+                        font-weight: 500;
 
                         display: flex;
                         justify-content: center;
