--- a/scss/componentes/_nav.scss
+++ b/scss/componentes/_nav.scss
@@ -210,10 +210,12 @@ body::-webkit-scrollbar:vertical {
 
                     .tCPopUp-total{
                         font-size: 22px;
+                        font-weight: 200;
                     }
 
                     .tCPopUp-precio{
                         font-size: 25px;
+                        font-weight: 500;
                     }
                 }
 
@@ -230,7 +232,7 @@ body::-webkit-scrollbar:vertical {
                         height: 38px;
                         background: #3e015a;
                         color: #fff;
-                        font-size: 13px;
+                        font-size: 15px;
                         border-radius: 40px;
 
                         display: flex;
@@ -244,7 +246,7 @@ body::-webkit-scrollbar:vertical {
                         height: 38px;
                         background: #3e015a;
                         color: #fff;
-                        font-size: 13px;
+                        font-size: 15px;
                         border-radius: 40px;
 
                         display: flex;
