--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -39,6 +39,10 @@ header {
     border-radius: 30px;
 }
 
+.btn-conoce:hover{
+    background: #5f008b;
+} 
+
 .header-img {
     height: 100%;
     display: flex;
