--- a/css/main.css
+++ b/css/main.css
@@ -588,16 +588,28 @@ main {
 .cont-productos main {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  background-color: #e4e4e4; }
+  .cont-productos main .barra_filtros {
+    gap: 100px;
+    display: flex; }
+    .cont-productos main .barra_filtros .cont_bf {
+      display: flex; }
+      .cont-productos main .barra_filtros .cont_bf .p_bf {
+        font-weight: 500;
+        color: #5c5c5c;
+        margin-right: 15px; }
   .cont-productos main .productos-titulo {
     margin: 60px 0;
     font-size: 30px;
     text-align: center; }
   .cont-productos main .cont-productos-main {
     width: 78%;
-    margin-top: 20px;
+    margin-top: 50px;
     margin-bottom: 150px;
     gap: 120px;
+    padding: 30px 70px 100px 50px;
+    background-color: #ffffff;
     display: flex;
     flex-flow: wrap;
     justify-content: baseline;
