--- a/scss/componentes/_productos.scss
+++ b/scss/componentes/_productos.scss
@@ -1,4 +1,3 @@
-
 .cont-productos {
 
 
@@ -7,6 +6,22 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        background-color: #e4e4e4;
+
+        .barra_filtros {
+            gap: 100px;
+            display: flex;
+            .cont_bf {
+                display: flex;
+
+                .p_bf {
+                    font-weight: 500;
+                    color: #5c5c5c;
+                    margin-right: 15px;
+                }
+
+            }
+        }
 
         .productos-titulo {
             margin: 60px 0;
@@ -16,9 +31,11 @@
 
         .cont-productos-main {
             width: 78%;
-            margin-top: 20px;
+            margin-top: 50px;
             margin-bottom: 150px;
             gap: 120px;
+            padding: 30px 70px 100px 50px;
+            background-color: #ffffff;
 
             display: flex;
             flex-flow: wrap;
@@ -26,7 +43,7 @@
             align-items: center;
 
 
-            .sect_mv_01{
+            .sect_mv_01 {
                 height: 100%;
                 align-items: center;
                 justify-content: end;
@@ -35,15 +52,16 @@
                     width: 195px;
                 }
 
-                p{
+                p {
                     margin-bottom: 20px;
                 }
 
-                .img_shop_ico{
+                .img_shop_ico {
                     display: none;
                     width: 30px;
                 }
-                .img_shop_ico:hover{
+
+                .img_shop_ico:hover {
                     display: flex;
                 }
 
