--- a/scss/main.scss
+++ b/scss/main.scss
@@ -279,8 +279,8 @@ main {
 //----------------------------------------------------//
 @import "componentes/productos";
 @import "componentes/nosotros";
-
-
+@import "componentes/contacto";
+@import "componentes/miCuenta";
 
 
 
