--- a/scss/componentes/_productos.scss
+++ b/scss/componentes/_productos.scss
@@ -1,12 +1,18 @@
 .cont-productos {
-
-
-
     main {
         display: flex;
         flex-direction: column;
         align-items: center;
         background-color: #e4e4e4;
+
+        .btn{
+            background: #3e015a;
+            color: #fff;
+            font-size: 14px;
+            padding: 9px 26px;
+            border: 0px;
+            border-radius: 30px;
+        }
 
         .barra_filtros {
             gap: 100px;
