--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,14 +33,14 @@
 //----------------------------------------------------//
 
 //**** MAIN ****//
-main {
+.main_index {
     width: 100%;
 
     .btn{
         background: #3e015a;
         color: #fff;
         font-size: 14px;
-        padding: 9px 30px;
+        padding: 9px 26px;
         border: 0px;
         border-radius: 30px;
     }
@@ -116,7 +116,7 @@ main {
             width: 100%;
             display: flex;
             justify-content: center;
-            gap: 80px;
+            gap: 70px;
 
         
 
@@ -126,7 +126,7 @@ main {
                 justify-content: end;
 
                 img {
-                    width: 210px;
+                    width: 200px;
                 }
 
                 p{
@@ -141,7 +141,7 @@ main {
                 justify-content: center;
 
                 img {
-                    width: 210px;
+                    width: 200px;
                 }
 
                 p{
@@ -156,7 +156,7 @@ main {
                 justify-content: center;
 
                 img {
-                    width: 210px;
+                    width: 200px;
                 }
 
                 p{
@@ -170,7 +170,7 @@ main {
                 justify-content: baseline;
 
                 img {
-                    width: 210px;
+                    width: 200px;
                 }
 
                 p{
@@ -201,7 +201,7 @@ main {
             width: 100%;
             display: flex;
             justify-content: center;
-            gap: 80px;
+            gap: 70px;
 
         
 
@@ -211,7 +211,7 @@ main {
                 justify-content: end;
 
                 img {
-                    width: 210px;
+                    width: 200px;
                 }
 
                 p{
@@ -225,7 +225,7 @@ main {
                 justify-content: center;
 
                 img {
-                    width: 210px;
+                    width: 200px;
                 }
 
                 p{
@@ -247,7 +247,7 @@ main {
                 justify-content: center;
 
                 img {
-                    width: 210px;
+                    width: 200px;
                 }
 
                 p{
@@ -262,7 +262,7 @@ main {
                 justify-content: baseline;
 
                 img {
-                    width: 210px;
+                    width: 200px;
                 }
 
                 p{
@@ -283,12 +283,10 @@ main {
 @import "componentes/miCuenta";
 
 
-
-
-
-
 //----------------------------------------------------//
 
-//**** FOOTER****//
-@import "componentes/footer";
+//**** FOOTER ****//
+@import "componentes/mediaqueries";
 
+//**** MEDIA QUERIES ****//
+@import "componentes/footer";
